# LibSock

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt
Assets/Templates/: settings.json  tasks.json
Samples/: CMakeLists.txt
Samples/HttpServerSimple/: CMakeLists.txt  HttpServerSimple_Main.cpp  ThreadManager.h
include/: ChatLog.hpp  UserInfo.hpp
libapp/: CMakeLists.txt
libapp/include/: UserInfo.hpp
libapp/src/: ChatLog.cpp  UserInfo.cpp
libhttp/: CMakeLists.txt
libhttp/include/: HttpHeader.hpp
libhttp/src/: HttpHeader.cpp
libsock/: CMakeLists.txt
libsock/include/: ASock.hpp  BindConfig.hpp  ConnectConfig.hpp  SockServer.hpp  SocketConfig.hpp
libsock/src/: ASock.cpp  BindConfig.cpp  ConnectConfig.cpp  SockServer.cpp  SocketConfig.cpp
libtcp/: CMakeLists.txt
libtcp/include/: TcpClient.hpp  TcpServer.hpp  UdpServer.hpp
libtcp/src/: TcpClient.cpp  TcpServer.cpp  UdpServer.cpp
libudp/: CMakeLists.txt
libudp/include/: UdpServer.hpp
libudp/src/: UdpServer.cpp
libutil/: CMakeLists.txt
libutil/include/: Base64.hpp  StrUtils.hpp
libutil/src/: Base64.cpp  StrUtils.cpp
libuuid/: CMakeLists.txt
libuuid/include/: UUID.hpp
libuuid/src/: UUID.cpp
original_src/: tinyserver2.cpp
scripts/cmake/: build.sh
statics/: index.html
statics/chat_app_sample/: chat.html  index.html
statics/chat_app_sample/css/: join.css  style.css
statics/chat_app_sample/js/: cookie.js  join.js  script.js
test/: CMakeLists.txt  chat_app_sample.cpp  http_delay_response_sample.cpp  test_base64.cpp  test_tcp.cpp  test_tcp_client.cpp  test_tcp_server.cpp  test_udp_server.cpp  websocket_sample.cpp
